Fri Jun 21 18:56:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigsub_int): Use bdigit_roomof.
	  (bigadd_int): Ditto.
	  (bigand_int): Ditto.
	  (bigor_int): Ditto.
	  (bigxor_int): Ditto.

Fri Jun 21 17:56:25 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/gcbench.rb: fix summary of benchmark result notaton.

Fri Jun 21 16:38:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/openssl/ossl_x509attr.c: change OSSL_X509ATTR_IS_SINGLE and
	  OSSL_X509ATTR_SET_SINGLE macros to use ->value.set rather than
	  ->set to fix compile failure

Fri Jun 21 15:26:45 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_sweep): profile sweep time correctly when LAZY_SWEEP is
	  disabled.

	* gc.c (gc_marks_test): store oldgen count and shady count
	  before test marking and restore them after marking.

Fri Jun 21 15:07:42 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: enable lazy sweep (commit miss).

Fri Jun 21 14:31:29 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ruby_setenv): refine error message so include the variable
	  name.

Fri Jun 21 14:15:08 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix to use total_allocated_object_num and heaps_used
	  at the GC time for profiler.

Fri Jun 21 12:35:35 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: RGENGC_CHECK_MODE should be 0.

Fri Jun 21 11:18:25 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_marks_body): fix to get `th' in this function.

Fri Jun 21 10:21:44 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heaps_header/heaps_slot): embed bitmaps into heaps_slot.
	  no need to maintain allocation/free bitmaps.

Fri Jun 21 09:22:16 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (slot_sweep_body): add counters at a time.

	* gc.c (gc_profile_dump_on): fix line break position.

Fri Jun 21 08:14:00 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c: refactoring bitmaps. introduce bits_t type and some Consts.

Fri Jun 21 08:04:32 2013  Koichi Sasada  <ko1@atdot.net>
