@@ -1,3 +1,7 @@
+Fri Jun 21 19:11:56 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* include/ruby/ruby.h, re.c: support write barrier for T_REGEXP.
+
 Fri Jun 21 18:56:58 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (bigsub_int): Use bdigit_roomof.
